# bag_converter

./: .gitmodules  CMakeLists.txt  gopro_to_bag.cpp  main.cpp  video_to_bag.cpp
.cache/clangd/index/: App.hpp.3ACF4470D8F5BE64.idx  App_inl.hpp.EF4DFACEFC0691D5.idx  Argv.hpp.2B292E6AD202F10E.idx  Argv_inl.hpp.533143415084B96D.idx  CLI.hpp.AD8605AAF32FC79D.idx  Config.hpp.8B7D440D1F295B6F.idx  ConfigFwd.hpp.1FA51E190D5EBAA9.idx  Config_inl.hpp.D6CDED8B31E0408B.idx  Encoding.hpp.266CC63FE2FA38A0.idx  Encoding_inl.hpp.E93A992C5ADCF8C6.idx  Error.hpp.063EBCA51161CC72.idx  Formatter.hpp.44B403C2D53A7C0F.idx  FormatterFwd.hpp.F0400CCFF8DDA055.idx  Formatter_inl.hpp.6479572C41D86DBF.idx  Macros.hpp.AA008A245462708E.idx  Option.hpp.462E6EB7456223D9.idx  Option_inl.hpp.44172B11A899D895.idx  Split.hpp.D0A8935982BBD6B2.idx  Split_inl.hpp.618AF8968442D7B7.idx  StringTools.hpp.74C70E506A0CE73A.idx  StringTools_inl.hpp.6084D9FB3EDBB6C0.idx  TypeTools.hpp.5DA7758D58F53047.idx  Validators.hpp.06490C59374D02FF.idx  Validators_inl.hpp.B02D108AB0815939.idx  Version.hpp.188CDDEFBE8FAF1A.idx  main.cpp.22E0EE0EE72942D9.idx
include/: gpmf_frame.hpp  gpmf_parser.hpp  progress_bar.hpp
src/: gpmf_frame.cpp  gpmf_parser.cpp  progress_bar.cpp
